--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <h1> Projects </h1>
     <a href="coded-word.html"> Coded Word </a>
     <a href="progressbar.html"> Progress Bar </a>
+    <a href="mini-battleship.html"> Mini-BattleShip </a> <label> - Uses: classes, objects, 2d arrays, for loops  </label>
 </body>
 </html>
