--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <a href="coded-word.html"> Coded Word </a>
     <a href="progressbar.html"> Progress Bar </a>
     <a href="mini-battleship.html"> Mini-BattleShip </a> 
-    <a href="Pong/pong.html"> Pong vs Computer </a>
+    <a href="pong/pong.html"> Pong vs Computer </a>
 </body>
 </html>
