--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="progressbar.html"> Progress Bar </a>
     <a href="mini-battleship.html"> Mini-BattleShip </a> 
     <a href="pong.html"> Pong vs Computer </a>
+    <a href="hamburger.html"> Homemade Hamburger Menu </a>
 </body>
 </html>
