--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1> Projects </h1>
     <a href="coded-word.html"> Coded Word </a>
     <a href="progressbar.html"> Progress Bar </a>
-    <a href="mini-battleship.html"> Mini-BattleShip </a> 
+    <a href="/Battleship/battleship.html"> Battleship </a> 
     <a href="pong.html"> Pong vs Computer </a>
     <a href="hamburger.html"> Homemade Hamburger Menu </a>
 </body>
